@@ -1,3 +1,11 @@
+2007-04-20  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcelanguagesmanager.c:
+	* gtksourceview/gtksourcestylemanager.c:
+
+	Make sure get_[lang|style]_dirs returns dirs in the proper
+	priority order.
+
 2006-04-20  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/language-specs/c.lang: made preprocessor directive
